check_final_6.txt
    Checking opc-cli v0.1.0 (C:\Users\WSALIGAN\code\opc-cli)
error[E0599]: no method named `context` found for struct `HRESULT` in the current scope
   --> src\main.rs:34:14
    |
 33 | /         windows::Win32::System::Com::CoInitializeEx(None, windows::Win32::System::Com::COINIT_MULTITHREADED)
 34 | |             .context("Failed to initialize COM MTA")?;
    | |_____________-^^^^^^^
    |
help: there is a method `to_text` with a similar name, but with different arguments
   --> C:\Users\WSALIGAN\scoop\persist\rustup\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ratatui-0.29.0\src\text\text.rs:702:5
    |
702 |     fn to_text(&self) -> Text<'_>;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
System.Management.Automation.RemoteException
For more information about this error, try `rustc --explain E0599`.
error: could not compile `opc-cli` (bin "opc-cli") due to 1 previous error
